--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/express": "^4.16.1",
     "@types/node": "^11.13.7",
     "concurrently": "^4.1.0",
+    "jest": "^24.7.1",
     "nodemon": "^1.18.11",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5"
