--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
   "dependencies": {
     "apollo-server-express": "^2.4.8",
     "express": "^4.16.4",
-    "graphql": "^14.2.1"
+    "graphql": "^14.2.1",
+    "merge-graphql-schemas": "^1.5.8"
   },
   "devDependencies": {
+    "@playlyfe/gql": "^2.6.1",
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.2.0",
     "@types/node": "^11.13.7",
