--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,23 @@ version: "3"
 services:
   server:
     image: node:10.15-alpine
+    environment:
+      - PORT=4000
     volumes:
       - .:/opt/code
     ports:
       - "4000:4000"
     working_dir: /opt/code
     command: sh -c "npm install && npm run watch"
+
+  db:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: example
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
