--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "serve": "node dist/server.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
     "build-ts": "npm run clean-up && tsc",
-    "watch-ts": "npm run clean-up && tsc -w",
+    "watch-ts": "tsc -w",
     "watch-node": "nodemon dist/server.js",
     "debug": "npm run build && npm run watch-debug",
     "serve-debug": "nodemon --inspect dist/server.js",
