--- a/package.json
+++ b/package.json
@@ -35,15 +35,21 @@
   "homepage": "https://github.com/brainstation-au/graphql-tutorial#readme",
   "dependencies": {
     "apollo-server-express": "^2.4.8",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "graphql": "^14.2.1",
-    "merge-graphql-schemas": "^1.5.8"
+    "merge-graphql-schemas": "^1.5.8",
+    "pg": "^7.10.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.16"
   },
   "devDependencies": {
     "@playlyfe/gql": "^2.6.1",
+    "@types/cors": "^2.8.5",
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.2.0",
     "@types/node": "^11.13.7",
+    "@types/pg": "^7.4.14",
     "concurrently": "^4.1.0",
     "jest": "^24.7.1",
     "nodemon": "^1.18.11",
