--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,17 @@
       "esnext.asynciterable"
     ],
     "module": "commonjs",
+    "moduleResolution": "node",
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "outDir": "dist",
     "sourceMap": true,
-    "target": "es6"
+    "target": "es6",
+    "types": [
+      "reflect-metadata"
+    ]
   },
   "compileOnSave": true,
   "include": [
