--- a/package.json
+++ b/package.json
@@ -2,21 +2,22 @@
   "name": "graphql-tutorial",
   "version": "1.0.0",
   "description": "Asset for a tutorial of GraphQL with typescript",
-  "main": "dist/server.js",
+  "main": "dist/index.js",
   "scripts": {
     "clean-up": "rm -rf dist",
     "test": "jest --forceExit --coverage --verbose",
     "watch-test": "npm run test -- --watchAll",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "start": "npm run serve",
+    "migrate": "typeorm migrations:run",
     "build": "npm run tslint && npm run build-ts",
-    "serve": "node dist/server.js",
+    "serve": "node dist/index.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
     "build-ts": "npm run clean-up && tsc",
     "watch-ts": "tsc -w",
-    "watch-node": "nodemon dist/server.js",
+    "watch-node": "nodemon dist/index.js",
     "debug": "npm run build && npm run watch-debug",
-    "serve-debug": "nodemon --inspect dist/server.js",
+    "serve-debug": "nodemon --inspect dist/index.js",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "repository": {
@@ -38,9 +39,11 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "graphql": "^14.2.1",
+    "inversify": "^5.0.1",
     "merge-graphql-schemas": "^1.5.8",
     "pg": "^7.10.0",
     "reflect-metadata": "^0.1.13",
+    "source-map-support": "^0.5.12",
     "typeorm": "^0.2.16"
   },
   "devDependencies": {
