--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "watch-test": "npm run test -- --watchAll",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "start": "npm run serve",
-    "migrate": "typeorm migrations:run",
+    "migrate": "typeorm migration:run",
+    "generate-migration": "typeorm migration:generate -n db-update",
     "build": "npm run tslint && npm run build-ts",
     "serve": "node dist/index.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
