--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     depends_on:
       - db
     working_dir: /opt/code
-    command: sh -c "npm install && npm run watch"
+    command: sh -c "npm install && npm run build && bin/wait-for db:5432 -t 30 -- npm run migrate && npm run watch"
 
   db:
     image: postgres
