--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "generate-migration": "typeorm migration:generate -n db-update",
     "build": "npm run tslint && npm run build-ts",
     "serve": "node dist/index.js",
+    "fake": "node dist/faker.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
     "build-ts": "npm run clean-up && tsc",
     "watch-ts": "tsc -w",
@@ -52,10 +53,12 @@
     "@playlyfe/gql": "^2.6.1",
     "@types/cors": "^2.8.5",
     "@types/express": "^4.16.1",
+    "@types/faker": "^4.1.5",
     "@types/graphql": "^14.2.0",
     "@types/node": "^11.13.7",
     "@types/pg": "^7.4.14",
     "concurrently": "^4.1.0",
+    "faker": "^4.1.0",
     "jest": "^24.7.1",
     "nodemon": "^1.18.11",
     "tslint": "^5.16.0",
