--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "graphql": "^14.2.1",
     "inversify": "^5.0.1",
     "merge-graphql-schemas": "^1.5.8",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
     "pg": "^7.10.0",
     "reflect-metadata": "^0.1.13",
     "runtypes": "^3.2.0",
@@ -55,6 +57,7 @@
     "@types/express": "^4.16.1",
     "@types/faker": "^4.1.5",
     "@types/graphql": "^14.2.0",
+    "@types/moment-timezone": "^0.5.12",
     "@types/node": "^11.13.7",
     "@types/pg": "^7.4.14",
     "concurrently": "^4.1.0",
