--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "serve": "node dist/index.js",
     "fake": "node dist/faker.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
-    "build-ts": "npm run clean-up && tsc",
-    "watch-ts": "tsc -w",
+    "build-ts": "npm run clean-up && tsc -p tsconfig.app.json",
+    "watch-ts": "tsc -w -p tsconfig.app.json",
     "watch-node": "nodemon dist/index.js",
     "debug": "npm run build && npm run watch-debug",
     "serve-debug": "nodemon --inspect dist/index.js",
@@ -55,12 +55,14 @@
     "@types/express": "^4.16.1",
     "@types/faker": "^4.1.5",
     "@types/graphql": "^14.2.0",
+    "@types/jest": "^24.0.12",
     "@types/node": "^11.13.7",
     "@types/pg": "^7.4.14",
     "concurrently": "^4.1.0",
     "faker": "^4.1.0",
     "jest": "^24.7.1",
     "nodemon": "^1.18.11",
+    "ts-jest": "^24.0.2",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5"
   }
