--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,7 @@
     "noUnusedParameters": true,
     "outDir": "dist",
     "sourceMap": true,
-    "target": "es6",
-    "types": [
-      "reflect-metadata"
-    ]
+    "target": "es6"
   },
   "compileOnSave": true,
   "include": [
