--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest --forceExit --detectOpenHandles",
     "watch-test": "npm run test -- --watchAll",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "start": "npm run serve",
+    "start": "npm run migrate && npm run serve",
     "migrate": "typeorm migration:run",
     "generate-migration": "typeorm migration:generate -n db-update",
     "build": "npm run tslint && npm run build-ts",
