--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "clean-up": "rm -rf dist",
     "test": "jest --forceExit --detectOpenHandles",
     "watch-test": "npm run test -- --watchAll",
-    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "start": "npm run migrate && npm run serve",
     "migrate": "typeorm migration:run",
     "generate-migration": "typeorm migration:generate -n db-update",
-    "build": "npm run tslint && npm run build-ts",
+    "build": "npm run lint && npm run build-ts",
     "serve": "node dist/index.js",
     "fake": "node dist/faker.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
@@ -53,18 +53,21 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
+    "@types/eslint": "^6.1.8",
     "@types/express": "^4.17.2",
     "@types/faker": "^4.1.9",
-    "@types/jest": "^24.9.1",
+    "@types/jest": "^25.1.3",
     "@types/node": "^12.12.28",
     "@types/pg": "^7.14.1",
     "@types/validator": "^10.11.3",
-    "concurrently": "^4.1.2",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
+    "concurrently": "^5.1.0",
+    "eslint": "^6.8.0",
     "faker": "^4.1.0",
-    "jest": "^24.9.0",
+    "jest": "^25.1.0",
     "nodemon": "^1.19.4",
-    "ts-jest": "^24.3.0",
-    "tslint": "^5.20.1",
+    "ts-jest": "^25.2.1",
     "typescript": "^3.8.2"
   }
 }
